# c_term

./: CMakeLists.txt  README.md
src/: main.c
src/enums/: states.h
src/file_handlers/: read_file.c  read_file.h
src/globals/: colors.h  settings.c  settings.h  terminal_setting.h
src/keyboard_handler/: handle_insert.c  handle_insert.h  handle_normal.c  handle_normal.h
src/structs/: box_cords.h  dimensions.h
src/terminal_handlers/: get_term_size.c  get_term_size.h  out_terminal.c  out_terminal.h
